load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
load("@bazel_tools//tools/cpp:unix_cc_toolchain_config.bzl", "cc_toolchain_config")

config_setting(
    name = "remote_frame_buffer",
    define_values = {"REMOTE_FRAME_BUFFER": "1"},
)

config_setting(
    name = "use_bzlmod",
    define_values = {"use_bzlmod": "1"},
)

shared_hdrs = [
    "PmpManager.hpp",
    "PmaManager.hpp",
]

base_hdrs = [
    "HartConfig.hpp",
    "WhisperMessage.h",
    "Hart.hpp",
    "Core.hpp",
    "System.hpp",
    "Server.hpp",
    "Interactive.hpp",
    "DecodedInst.hpp",
    "Decoder.hpp",
    "InstEntry.hpp",
    "InstId.hpp",
    "Isa.hpp",
    "IoDevice.hpp",
    "Uart8250.hpp",
    "numa.hpp",
] + shared_hdrs

cc_library(
    name          = "shared_headers",
    hdrs          = shared_hdrs,
    visibility    = ["//visibility:public"],
)

cc_library(
    name          = "rvcore",
    srcs          = glob(include = ["*.cpp", "*.hpp"], exclude = ["whisper.cpp", "py-bindings.cpp"] + base_hdrs + ["RemoteFrameBuffer.hpp", "RemoteFrameBuffer.cpp"]) + select({
        ":remote_frame_buffer": ["RemoteFrameBuffer.cpp"],
        "//conditions:default": [],
    }),
    hdrs          = base_hdrs + select({
        ":remote_frame_buffer": ["RemoteFrameBuffer.hpp"],
        "//conditions:default": [],
    }),
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS", "LZ4_COMPRESS"],
    deps          = [
        ":shared_headers",
        "//third_party:nlohmann",
        "//third_party:elfio",
        "//third_party:softfloat",
        "//third_party:linenoise",
        "//pci:pci",
        "//virtual_memory:virtual_memory",
        "//aplic:aplic",
        "//imsic:imsic",
        "//iommu:iommu",
    ] + select({
        ":use_bzlmod": [
            "@boost.program_options//:boost.program_options",
            "@boost.algorithm//:boost.algorithm",
            "@boost.format//:boost.format",
            "@boost.circular_buffer//:boost.circular_buffer",
            "@boost.iostreams//:boost.iostreams",
            "@boost.io//:boost.io",
            "@lz4//:lz4_frame",
            "@zlib",
        ],
        "//conditions:default": [],
    }),
    linkopts      = ["-lpthread", "-ldl", "-lrt", "-lutil"] + select({
        ":use_bzlmod": [],
        "//conditions:default": ["-lz"],
    }) + select({
        ":use_bzlmod": [],
        "//conditions:default": ["-llz4"],
    }) + select({
        ":remote_frame_buffer": ["-lvncserver"],
        "//conditions:default": [],
    }),
    visibility    = ["//visibility:public"],
)

cc_binary(
    name          = "whisper",
    srcs          = ["whisper.cpp"],
    deps          = [":rvcore"],
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS", "LZ4_COMPRESS"],
    linkopts      = ["-rdynamic"] + select({
        ":use_bzlmod": [],
        "//conditions:default": ["-lboost_program_options"],
    }),
    visibility    = ["//visibility:public"],
)

cc_library(
    name          = "virtual_memory",
    deps          = ["//virtual_memory:virtual_memory"],
    visibility    = ["//visibility:public"],
)

pybind_extension(
    name          = "pywhisper",
    srcs          = ["py-bindings.cpp"],
    deps          = [":rvcore"],
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS"],
    visibility    = ["//visibility:__pkg__"],
)

py_library(
    name          = "pywhisper_lib",
    data          = ["pywhisper.so"],
    visibility    = ["//visibility:public"],
)

# RISC-V 64-bit Linux platform definition
platform(
    name = "riscv64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:riscv64",
    ],
    visibility = ["//visibility:public"],
)

# RISC-V 64-bit Linux GCC toolchain configuration
cc_toolchain_config(
    name = "riscv64_linux_gcc_toolchain_config",
    cpu = "riscv64",
    compiler = "gcc",
    toolchain_identifier = "riscv64-linux-gnu-gcc",
    host_system_name = "x86_64-linux-gnu",
    target_system_name = "riscv64-linux-gnu",
    target_libc = "glibc",
    abi_version = "unknown",
    abi_libc_version = "unknown",
    tool_paths = {
        "gcc": "riscv64-unknown-linux-gnu-gcc",
        "g++": "riscv64-unknown-linux-gnu-g++",
        "cpp": "riscv64-unknown-linux-gnu-cpp",
        "ar": "riscv64-unknown-linux-gnu-ar",
        "ld": "riscv64-unknown-linux-gnu-ld",
        "nm": "riscv64-unknown-linux-gnu-nm",
        "objdump": "riscv64-unknown-linux-gnu-objdump",
        "objcopy": "riscv64-unknown-linux-gnu-objcopy",
        "strip": "riscv64-unknown-linux-gnu-strip",
        "gcov": "riscv64-unknown-linux-gnu-gcov",
        "llvm-cov": "riscv64-unknown-linux-gnu-gcov",
        "dwp": "/usr/bin/false",
    },
    compile_flags = [
        "-fstack-protector",
        "-Wall",
        "-Wunused-but-set-parameter",
        "-Wno-free-nonheap-object",
        "-fno-omit-frame-pointer",
    ],
    cxx_flags = ["-std=c++20"],
    link_flags = [
        "-lstdc++",
        "-lm",
    ],
    cxx_builtin_include_directories = [
        "/opt/riscv64-linux-gnu/lib/gcc/riscv64-unknown-linux-gnu/16.0.0/include",
        "/opt/riscv64-linux-gnu/lib/gcc/riscv64-unknown-linux-gnu/16.0.0/include-fixed",
        "/opt/riscv64-linux-gnu/riscv64-unknown-linux-gnu/include/c++/16.0.0",
        "/opt/riscv64-linux-gnu/riscv64-unknown-linux-gnu/include/c++/16.0.0/riscv64-unknown-linux-gnu",
        "/opt/riscv64-linux-gnu/sysroot/usr/include",
    ],
)

filegroup(
    name = "riscv64_all_files",
    srcs = [],
)

cc_toolchain(
    name = "riscv64_linux_gcc_cc_toolchain",
    all_files = ":riscv64_all_files",
    compiler_files = ":riscv64_all_files",
    dwp_files = ":riscv64_all_files",
    linker_files = ":riscv64_all_files",
    objcopy_files = ":riscv64_all_files",
    strip_files = ":riscv64_all_files",
    supports_param_files = 1,
    toolchain_config = ":riscv64_linux_gcc_toolchain_config",
    toolchain_identifier = "riscv64-linux-gnu-gcc",
)

toolchain(
    name = "riscv64_linux_gcc_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:riscv64",
    ],
    toolchain = ":riscv64_linux_gcc_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# RISC-V 64-bit Linux Clang toolchain configuration
cc_toolchain_config(
    name = "riscv64_linux_clang_toolchain_config",
    cpu = "riscv64",
    compiler = "clang",
    toolchain_identifier = "riscv64-linux-gnu-clang",
    host_system_name = "x86_64-linux-gnu",
    target_system_name = "riscv64-linux-gnu",
    target_libc = "glibc",
    abi_version = "unknown",
    abi_libc_version = "unknown",
    tool_paths = {
        "gcc": "/opt/riscv64-linux-gnu/bin/clang",
        "g++": "/opt/riscv64-linux-gnu/bin/clang++",
        "cpp": "/opt/riscv64-linux-gnu/bin/clang",
        "ar": "/opt/riscv64-linux-gnu/bin/llvm-ar",
        "ld": "/opt/riscv64-linux-gnu/bin/ld.lld",
        "nm": "/opt/riscv64-linux-gnu/bin/llvm-nm",
        "objdump": "/opt/riscv64-linux-gnu/bin/llvm-objdump",
        "objcopy": "/opt/riscv64-linux-gnu/bin/llvm-objcopy",
        "strip": "/opt/riscv64-linux-gnu/bin/llvm-strip",
        "gcov": "/opt/riscv64-linux-gnu/bin/llvm-cov",
        "llvm-cov": "/opt/riscv64-linux-gnu/bin/llvm-cov",
        "dwp": "/opt/riscv64-linux-gnu/bin/llvm-dwp",
    },
    compile_flags = [
        "--target=riscv64-unknown-linux-gnu",
        "-fstack-protector",
        "-Wall",
        "-fno-omit-frame-pointer",
    ],
    cxx_flags = ["-std=c++20"],
    link_flags = [
        "--target=riscv64-unknown-linux-gnu",
        "-fuse-ld=lld",
        "-lstdc++",
        "-lm",
    ],
    cxx_builtin_include_directories = [
        "/opt/riscv64-linux-gnu/lib/gcc/riscv64-unknown-linux-gnu/16.0.0/include",
        "/opt/riscv64-linux-gnu/lib/gcc/riscv64-unknown-linux-gnu/16.0.0/include-fixed",
        "/opt/riscv64-linux-gnu/riscv64-unknown-linux-gnu/include/c++/16.0.0",
        "/opt/riscv64-linux-gnu/riscv64-unknown-linux-gnu/include/c++/16.0.0/riscv64-unknown-linux-gnu",
        "/opt/riscv64-linux-gnu/sysroot/usr/include",
        "/opt/riscv64-linux-gnu/lib/clang/22/include",
    ],
)

cc_toolchain(
    name = "riscv64_linux_clang_cc_toolchain",
    all_files = ":riscv64_all_files",
    compiler_files = ":riscv64_all_files",
    dwp_files = ":riscv64_all_files",
    linker_files = ":riscv64_all_files",
    objcopy_files = ":riscv64_all_files",
    strip_files = ":riscv64_all_files",
    supports_param_files = 1,
    toolchain_config = ":riscv64_linux_clang_toolchain_config",
    toolchain_identifier = "riscv64-linux-gnu-clang",
)

toolchain(
    name = "riscv64_linux_clang_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:riscv64",
    ],
    toolchain = ":riscv64_linux_clang_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
