load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")

config_setting(
    name = "remote_frame_buffer",
    define_values = {"REMOTE_FRAME_BUFFER": "1"},
)

shared_hdrs = [
    "PmpManager.hpp",
    "PmaManager.hpp",
]

base_hdrs = [
    "HartConfig.hpp",
    "WhisperMessage.h",
    "Hart.hpp",
    "Core.hpp",
    "System.hpp",
    "Server.hpp",
    "Interactive.hpp",
    "DecodedInst.hpp",
    "Decoder.hpp",
    "InstEntry.hpp",
    "InstId.hpp",
    "Isa.hpp",
    "IoDevice.hpp",
    "Uart8250.hpp",
    "numa.hpp",
] + shared_hdrs

cc_library(
    name          = "shared_headers",
    hdrs          = shared_hdrs,
    visibility    = ["//visibility:public"],
)

cc_library(
    name          = "rvcore",
    srcs          = glob(include = ["*.cpp", "*.hpp"], exclude = ["whisper.cpp", "py-bindings.cpp"] + base_hdrs + ["RemoteFrameBuffer.hpp", "RemoteFrameBuffer.cpp"]) + select({
        ":remote_frame_buffer": ["RemoteFrameBuffer.cpp"],
        "//conditions:default": [],
    }),
    hdrs          = base_hdrs + select({
        ":remote_frame_buffer": ["RemoteFrameBuffer.hpp"],
        "//conditions:default": [],
    }),
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS", "LZ4_COMPRESS"],
    deps          = [":shared_headers", "//third_party:nlohmann", "//third_party:elfio", "//third_party:softfloat", "//third_party:linenoise", "//pci:pci", "//virtual_memory:virtual_memory", "//aplic:aplic", "//imsic:imsic", "//iommu:iommu"],
    linkopts      = ["-lpthread", "-lz", "-ldl", "-lrt", "-llz4", "-lutil"] + select({
        ":remote_frame_buffer": ["-lvncserver"],
        "//conditions:default": [],
    }),
    visibility    = ["//visibility:public"],
)

cc_binary(
    name          = "whisper",
    srcs          = ["whisper.cpp"],
    deps          = [":rvcore"],
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS", "LZ4_COMPRESS"],
    linkopts      = ["-lboost_program_options", "-rdynamic"],
    visibility    = ["//visibility:public"],
)

cc_library(
    name          = "virtual_memory",
    deps          = ["//virtual_memory:virtual_memory"],
    visibility    = ["//visibility:public"],
)

pybind_extension(
    name          = "pywhisper",
    srcs          = ["py-bindings.cpp"],
    deps          = [":rvcore"],
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS"],
    visibility    = ["//visibility:__pkg__"],
)

py_library(
    name          = "pywhisper_lib",
    data          = ["pywhisper.so"],
    visibility    = ["//visibility:public"],
)
